# rust-newsletter

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  spec.yaml.example
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml
migrations/: 20230930161029_create_subscriptions_table.sql  20231207160531_add_status_to_subscriptions.sql  20231207161656_make_status_not_null_in_subscriptions.sql  20240131112100_seed_user.sql  20240219160230_create_newsletter_issues_table.sql  20240220104942_rename_column_in_newsletter_issue.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriptions.rs
src/domain/subscriptions/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/helpers/: error_utils.rs  mod.rs  utils.rs
src/idempotency/: mod.rs  persistance.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/api/: health_check.rs  newsletters.rs
src/routes/dashboard/: dashboard_handler.rs  logout.rs  mod.rs
src/routes/dashboard/newsletter_portal/: get.rs  post.rs
src/routes/dashboard/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletter_portal.rs  subscriptions.rs  subscriptions_confirm.rs
